fix(radio-button): align with checkbox
This change rectifies the style of checkbox and the vertical variant of
radio button, so they have the same height and margin.

Fixes #4154.

--- a/packages/components/src/components/checkbox/_checkbox.scss
+++ b/packages/components/src/components/checkbox/_checkbox.scss
@@ -49,12 +49,13 @@
     @include reset;
     @include type-style('body-short-01');
 
-    line-height: 1.5rem;
+    line-height: 1.25rem;
+    margin-bottom: rem(8px);
     position: relative;
     display: flex;
     cursor: pointer;
     padding-left: rem(26px); //width of checkbox 16px + 10px of padding
-    min-height: rem(24px);
+    min-height: rem(20px);
     user-select: none;
   }
 
@@ -76,7 +77,7 @@
     // text overflows.
     position: absolute;
     left: 0;
-    top: rem(2px);
+    top: 0;
 
     // Checkboxes with a background color look visually off against a parent container.
     background-color: transparent;
@@ -89,7 +90,7 @@
     content: '';
     position: absolute;
     left: rem(6px);
-    top: rem(8px);
+    top: rem(6px);
     width: rem(7px);
     height: rem(3px);
     background: none;
@@ -127,7 +128,7 @@
     border-left: 0 solid $inverse-01;
     border-bottom: 2px solid $inverse-01;
     width: rem(8px);
-    top: rem(11px);
+    top: rem(9px);
   }
 
   //----------------------------------------------
@@ -149,7 +150,7 @@
     width: rem(20px);
     height: rem(20px);
     left: -2px;
-    top: 0;
+    top: -2px;
   }
 
   //----------------------------------------------
